blog view work in progress

--- a/views/blog.haml
+++ b/views/blog.haml
@@ -1,12 +1,35 @@
 %nav
   .off
     %a(href="/")
-      %img.btn(src="/images/btns/portfolio.jpg" alt="portfolio")/
+      %img.btn(src="/images/navigation/portfolio.jpg" alt="portfolio")/
   .off
     %a(href="/about")
-      %img.btn(src="/images/btns/about.jpg" alt="about")/
+      %img.btn(src="/images/navigation/about.jpg" alt="about")/
 
   .on
     %a(href="/blog")
-      %img.btn(src="/images/btns/blog.jpg" alt="blog")/
-.about
+      %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
+
+.blog
+  %table
+    %tr
+      %th{:colspan => "2"}
+        November, December, January
+        .title-date 
+          Tue January 31 2012
+    %tr
+      %td.left
+        %p
+          Ok, so I'm going to have to fast track to present times because I simply cannot keep up. In short, I moved, across the country from Toronto AND New York City, and it was a big deal. Huge! It was also an awesome decision!
+        %p
+          San Francisco has its pros and cons but the cons can be ignored and avoided, leaving the pros to enrich your life. Out here I don't have to face the brutality of winter. It can get chilly, but it will never be the near-death numbing cold that I've put up with for too long. Simple walks around my neighborhood offer magnificent awe inspiring views of the bay with white sailboat masts bobbing up and down on the blue ocean, scattered islands and the Golden Gate bridge as their backdrop. To walk my dog is to breathe fresh air and to constantly think to yourself how unreal and beautiful the panoramas on every street intersection are. To have that while living in a city is, in my opinion, to live the dream.
+      %td
+        %p
+          So.... yes, I'm happy out here. But above all I'm busy. At first I was busy with the move, now I'm busy with errands and tasks that I will not have time for once I start working full time. Also taking up much of my time is the redesign of this website and my learnings in preparation for my inevitable job interviews. It is definitely a challenge getting one's life in order but I can't complain, despite being busy this is the most relaxed I've felt in a long time (especially with the wedding, the honeymoon, the packing, the moving, the apartment search - all happening back to back from September until now). Compared to the last few crazy months of my life, recently life has felt like an extended vacation!
+        %p Next post I will have a new and improved site. Stay tuned.
+      %tr
+        %td.center{:colspan => "2"}
+          %img(src="/images/blog/blog_pic1.JPG" alt="pic")/
+          
+  .archives
+    %h4 ARCHIVES
