--- a/views/layout.haml
+++ b/views/layout.haml
@@ -14,7 +14,7 @@
     .content
       %header
         %a(href="/")
-          %img(src="/images/logo.jpg" alt="anaenders")/
+          %img(src="/images/btns/logo.jpg" alt="anaenders")/
 
       = yield
 
