--- a/views/index.haml
+++ b/views/index.haml
@@ -1,62 +1,62 @@
 %nav
   .on
     %a(href="/")
-      %img.btn(src="/images/btns/portfolio.jpg" alt="portfolio")/
+      %img.btn(src="/images/navigation/portfolio.jpg" alt="portfolio")/
   .off
     %a(href="/about")
-      %img.btn(src="/images/btns/about.jpg" alt="about")/
+      %img.btn(src="/images/navigation/about.jpg" alt="about")/
 
   .off
     %a(href="/blog")
-      %img.btn(src="/images/btns/blog.jpg" alt="blog")/
+      %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
 
 .portfolio
   .web
     .web-logo 
-      %img(src="/images/btns/web_logo.png" alt="web")/
+      %img(src="/images/portfolio/web/web_logo.png" alt="web")/
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/ana_ian.png" alt="ana and ian")/
+        %img(src="/images/portfolio/web/ana_ian.png" alt="ana and ian")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/scully.png" alt="scully and scully")/
+        %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/mally.png" alt="mally beauty")/
+        %img(src="/images/portfolio/web/mally.png" alt="mally beauty")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/kayandy.png" alt="kayleigh and andy")/   
+        %img(src="/images/portfolio/web/kayandy.png" alt="kayleigh and andy")/   
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/kicokids.png" alt="kico kids")/
+        %img(src="/images/portfolio/web/kicokids.png" alt="kico kids")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/ajaline.png" alt="ajaline")/
+        %img(src="/images/portfolio/web/ajaline.png" alt="ajaline")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/satellite_records.png" alt="satellite records")/
+        %img(src="/images/portfolio/web/satellite_records.png" alt="satellite records")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/kenneth_cole.png" alt="kenneth cole")/
+        %img(src="/images/portfolio/web/kenneth_cole.png" alt="kenneth cole")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/bobbi_brown.png" alt="bobbi brown")/
+        %img(src="/images/portfolio/web/bobbi_brown.png" alt="bobbi brown")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/yigalazrouel.png" alt="yigal azrouel")/
+        %img(src="/images/portfolio/web/yigalazrouel.png" alt="yigal azrouel")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/scully.png" alt="scully and scully")/
+        %img(src="/images/portfolio/web/scully.png" alt="scully and scully")/
   
     .small-thumb
       %a(href="#")
@@ -64,75 +64,75 @@
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/lanecrawford.png" alt="lane crawford")/
+        %img(src="/images/portfolio/web/lanecrawford.png" alt="lane crawford")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/lanecrawford_teaser.png" alt="lane crawford teaser")/
+        %img(src="/images/portfolio/web/lanecrawford_teaser.png" alt="lane crawford teaser")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/grandsf.png" alt="grand sf")/
+        %img(src="/images/portfolio/web/grandsf.png" alt="grand sf")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/newlywish.png" alt="newlywish")/
+        %img(src="/images/portfolio/web/newlywish.png" alt="newlywish")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/luckyzinc.png" alt="lucky zinc")/
+        %img(src="/images/portfolio/web/luckyzinc.png" alt="lucky zinc")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/carlosfalchi.png" alt="carlos falchi")/
+        %img(src="/images/portfolio/web/carlosfalchi.png" alt="carlos falchi")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/carlosfalchi_teaser.png" alt="carlos falchi teaser")/
+        %img(src="/images/portfolio/web/carlosfalchi_teaser.png" alt="carlos falchi teaser")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/coolercleanse.png" alt="cooler cleanse")/
+        %img(src="/images/portfolio/web/coolercleanse.png" alt="cooler cleanse")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/orsella.png" alt="orsella's site")/
+        %img(src="/images/portfolio/web/orsella.png" alt="orsella's site")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/lss.png" alt="lucky style spotter")/
+        %img(src="/images/portfolio/web/lss.png" alt="lucky style spotter")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/bond_and_bowery.png" alt="bond and bowery")/
+        %img(src="/images/portfolio/web/bond_and_bowery.png" alt="bond and bowery")/
     
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/chilewich.png" alt="chilewich")/
+        %img(src="/images/portfolio/web/chilewich.png" alt="chilewich")/
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/thornton.png" alt="thornton tomasetti")/
+        %img(src="/images/portfolio/web/thornton.png" alt="thornton tomasetti")/
   
     .small-thumb  
       %a(href="#")
-        %img(src="/images/portfolio/liz.png" alt="liz")/
+        %img(src="/images/portfolio/web/liz.png" alt="liz")/
    
     .small-thumb 
       %a(href="#")
-        %img(src="/images/portfolio/citibabes.png" alt="citibabes")/
+        %img(src="/images/portfolio/web/citibabes.png" alt="citibabes")/
     
     .small-thumb  
       %a(href="#")
-        %img(src="/images/portfolio/mally_v1.png" alt="mally beauty")/
+        %img(src="/images/portfolio/web/mally_v1.png" alt="mally beauty")/
     
     .small-thumb  
       %a(href="#")
-        %img(src="/images/portfolio/kates.png" alt="kates paperie")/
+        %img(src="/images/portfolio/web/kates.png" alt="kates paperie")/
     
     .small-thumb  
       %a(href="#")
-        %img(src="/images/portfolio/kimara.png" alt="kimara")/
+        %img(src="/images/portfolio/web/kimara.png" alt="kimara")/
   
   .print
     
