blog view complete

--- a/views/about.haml
+++ b/views/about.haml
@@ -139,29 +139,20 @@
       .category-container
         %table.contact-icons
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/cmu.jpg" alt="cmu")/
+            %img.btn(src="/images/about/btns/cmu.jpg" alt="cmu")/
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/email.jpg" alt="email")/
+            %a.email(href="#")email
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/google.jpg" alt="google plus")/
+            %a.google(href="#")google
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/rss.jpg" alt="rss")/
+            %a.rss(href="#")rss
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/linkedIn.jpg" alt="LinkedIn")/
+            %a.linkedIn(href="#")linkedIn
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/pinterest.jpg" alt="pinterest")/
+            %a.pinterest(href="#")pinterest
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/facebook.jpg" alt="facebook")/
+            %a.facebook(href="#")facebook
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/twitter.jpg" alt="twitter")/
+            %a.twitter(href="#")twitter
           %td
-            %a(href="#")
-              %img.btn(src="/images/about/btns/github.jpg" alt="github")/
+            %a.github(href="#")github
