--- a/views/index.haml
+++ b/views/index.haml
@@ -60,7 +60,7 @@
   
     .small-thumb
       %a(href="#")
-        %img(src="/images/portfolio/boast.png" alt="boast")/
+        %img(src="/images/portfolio/web/boast.png" alt="boast")/
     
     .small-thumb
       %a(href="#")
@@ -135,6 +135,24 @@
         %img(src="/images/portfolio/web/kimara.png" alt="kimara")/
   
   .print
+    .print-logo 
+      %img(src="/images/portfolio/print/print_logo.png" alt="print")/
+      
+    %img(src="/images/portfolio/print/bg1.jpg" alt="black and white")/
+    %img(src="/images/portfolio/print/bg2.jpg" alt="black and white")/
+    %img(src="/images/portfolio/print/bg3.jpg" alt="black and white")/
+    .group-float
+      %img(src="/images/portfolio/print/color1.jpg" alt="color")/
+      %img(src="/images/portfolio/print/color2.jpg" alt="color")/
+    %img(src="/images/portfolio/print/color3.jpg" alt="color")/
     
+  .woodwork
+    .woodwork-logo 
+      %img(src="/images/portfolio/woodwork/woodwork_logo.png" alt="woodwork")/
+      
+    %img(src="/images/portfolio/woodwork/wood1.jpg" alt="wood")/
+    %img(src="/images/portfolio/woodwork/wood2.jpg" alt="wood")/
+    %img(src="/images/portfolio/woodwork/wood3.jpg" alt="wood")/
+    %img(src="/images/portfolio/woodwork/wood4.jpg" alt="wood")/
   
 .clear
