site wide edits and new blog

--- a/views/about.haml
+++ b/views/about.haml
@@ -141,20 +141,20 @@
           %td
             %img.btn(src="/images/about/btns/cmu.jpg" alt="cmu")/
           %td
-            %a.email(href="#")email
+            %a.email{:target => 'blank'}(href="mailto:ana.enders@gmail.com")
           %td
-            %a.google(href="#")google
+            %a.google{:target => 'blank'}(href="https://plus.google.com/u/1/107903893980438786456/posts")
           %td
-            %a.rss(href="#")rss
+            %a.rss(href="#")
           %td
-            %a.linkedIn(href="#")linkedIn
+            %a.linkedIn{:target => 'blank'}(href="http://www.linkedin.com/in/anaenders")
           %td
-            %a.pinterest(href="#")pinterest
+            %a.pinterest{:target => 'blank'}(href="http://pinterest.com/anamonster/")
           %td
-            %a.facebook(href="#")facebook
+            %a.facebook{:target => 'blank'}(href="https://www.facebook.com/anamonster")
           %td
-            %a.twitter(href="#")twitter
+            %a.twitter{:target => 'blank'}(href="https://twitter.com/#!/anaecarter")
           %td
-            %a.github(href="#")github
+            %a.github{:target => 'blank'}(href="https://github.com/anacarter")
             
 .clear
