--- a/views/blog.haml
+++ b/views/blog.haml
@@ -11,57 +11,39 @@
       %img.btn(src="/images/navigation/blog.jpg" alt="blog")/
 
 .blog
-  %table{:cellspacing => "0", :cellpadding => "0"}
-    %tr
-      %th{:colspan => "2"}
-        November, December, January
-        .title-date 
-          Tue January 31 2012
-    %tr
-      %td.left
-        %p
-          Ok, so I'm going to have to fast track to present times because I simply cannot keep up. In short, I moved, across the country from Toronto AND New York City, and it was a big deal. Huge! It was also an awesome decision!
-        %p
-          San Francisco has its pros and cons but the cons can be ignored and avoided, leaving the pros to enrich your life. Out here I don't have to face the brutality of winter. It can get chilly, but it will never be the near-death numbing cold that I've put up with for too long. Simple walks around my neighborhood offer magnificent awe inspiring views of the bay with white sailboat masts bobbing up and down on the blue ocean, scattered islands and the Golden Gate bridge as their backdrop. To walk my dog is to breathe fresh air and to constantly think to yourself how unreal and beautiful the panoramas on every street intersection are. To have that while living in a city is, in my opinion, to live the dream.
-      %td
-        %p
-          So.... yes, I'm happy out here. But above all I'm busy. At first I was busy with the move, now I'm busy with errands and tasks that I will not have time for once I start working full time. Also taking up much of my time is the redesign of this website and my learnings in preparation for my inevitable job interviews. It is definitely a challenge getting one's life in order but I can't complain, despite being busy this is the most relaxed I've felt in a long time (especially with the wedding, the honeymoon, the packing, the moving, the apartment search - all happening back to back from September until now). Compared to the last few crazy months of my life, recently life has felt like an extended vacation!
-        %p Next post I will have a new and improved site. Stay tuned.
-      %tr
-        %td.center{:colspan => "2"}
-          %img(src="/images/blog/blog_pic1.JPG" alt="pic")/
-      %tr
-        %td.comments-link{:colspan => "2"}
-          %a(href="#")
-            comments (2)
-            
-  %table{:cellspacing => "0", :cellpadding => "0"}
-    %tr
-      %th{:colspan => "2"}
-        October
-        .title-date 
-          Mon November 28 2011
-    %tr
-      %td.left
-        %p
-          October: We went on our honeymoon, returned to Toronto to pack for our move to San Francisco, and I had a birthday.
-        %p
-          This month was far less stressful than September, though it was still hectic and I hardly had a chance to breathe and relax.
-        %p
-          Honeymoon had many moments of rest and relaxation but just as many moments of running around trying not to miss trains, and more walking and hiking than I would have liked. It was a good time regardless. The best meals of my life were had in small towns like Cinque Terre, and bigger food obsessed cities like Bologna. It was romantic, fun, exciting, and absolutely breathtaking. We started our two week vacation in Rome, followed by Florence, Pisa, Cinque Terre, Venice, Bologna and back to Rome.
-      %td
-        %p 
-          Of all the places we visited, I absolutely loved Cinque Terre. Ian and I might just have to retire there. It's an incredible place with its quaint towns composed of colorful houses built on mountain sides, facing the Mediterranean. It has lovely sunsets, amazing food, breathtaking views and nature.
-        %p
-          After our 2 week vacation, we came back home to Toby and Butters, who were being cared for my our dear friend Kendra. We were together again as a family briefly before I took off to San Francisco with Butters to apartment hunt, while Ian worked remotely and coordinated the move of our things to SF.
-      %tr
-        %td.center{:colspan => "2"}
-          %img(src="/images/blog/blog_pic2.JPG" alt="pic")/
-      %tr
-        %td.comments-link{:colspan => "2"}
-          %a(href="#")
-            comments (1)
-  .clear
+  .post
+    .title-date 
+      Tue January 31 2012
+    %h4 November, December, January
+    %img(src="/images/blog/blog_pic1.JPG" alt="pic")/   
+    %p
+      Ok, so I'm going to have to fast track to present times because I simply cannot keep up. In short, I moved, across the country from Toronto AND New York City, and it was a big deal. Huge! It was also an awesome decision!
+    %p
+      San Francisco has its pros and cons but the cons can be ignored and avoided, leaving the pros to enrich your life. Out here I don't have to face the brutality of winter. It can get chilly, but it will never be the near-death numbing cold that I've put up with for too long. Simple walks around my neighborhood offer magnificent awe inspiring views of the bay with white sailboat masts bobbing up and down on the blue ocean, scattered islands and the Golden Gate bridge as their backdrop. To walk my dog is to breathe fresh air and to constantly think to yourself how unreal and beautiful the panoramas on every street intersection are. To have that while living in a city is, in my opinion, to live the dream.
+    %p
+      So.... yes, I'm happy out here. But above all I'm busy. At first I was busy with the move, now I'm busy with errands and tasks that I will not have time for once I start working full time. Also taking up much of my time is the redesign of this website and my learnings in preparation for my inevitable job interviews. It is definitely a challenge getting one's life in order but I can't complain, despite being busy this is the most relaxed I've felt in a long time (especially with the wedding, the honeymoon, the packing, the moving, the apartment search - all happening back to back from September until now). Compared to the last few crazy months of my life, recently life has felt like an extended vacation!
+    %p Next post I will have a new and improved site. Stay tuned. 
+    %a.comments-link(href="#")
+      comments (2)
+
+  .post
+    .title-date 
+      Mon November 28 2011  
+    %h4 October
+    %img(src="/images/blog/blog_pic2.JPG" alt="pic")/
+    %p
+      October: We went on our honeymoon, returned to Toronto to pack for our move to San Francisco, and I had a birthday.
+    %p
+      This month was far less stressful than September, though it was still hectic and I hardly had a chance to breathe and relax.
+    %p
+      Honeymoon had many moments of rest and relaxation but just as many moments of running around trying not to miss trains, and more walking and hiking than I would have liked. It was a good time regardless. The best meals of my life were had in small towns like Cinque Terre, and bigger food obsessed cities like Bologna. It was romantic, fun, exciting, and absolutely breathtaking. We started our two week vacation in Rome, followed by Florence, Pisa, Cinque Terre, Venice, Bologna and back to Rome.
+    %p 
+      Of all the places we visited, I absolutely loved Cinque Terre. Ian and I might just have to retire there. It's an incredible place with its quaint towns composed of colorful houses built on mountain sides, facing the Mediterranean. It has lovely sunsets, amazing food, breathtaking views and nature.
+    %p
+      After our 2 week vacation, we came back home to Toby and Butters, who were being cared for my our dear friend Kendra. We were together again as a family briefly before I took off to San Francisco with Butters to apartment hunt, while Ian worked remotely and coordinated the move of our things to SF.
+    %a.comments-link(href="#")
+      comments (1)
+
   .pagination
     .prev
       %a(href="#")
@@ -69,39 +51,97 @@
     .next
       %a(href="#")
         %img(src="/images/blog/next.jpg" alt="next")/
-        
-.archives
-  %h4 ARCHIVES
-  %ul
-    %li 
-      %a(href="#")
-        November, December, January
-      %br/
-      %span January 23 2012
-    %li
-      %a(href="#")
-        October
-      %br/
-      %span November 28 2011
-    %li
-      %a(href="#")
-        Where do I begin ... September
-      %br/
-      %span November 27 2011
-    %li
-      %a(href="#")
-        Craziness
-      %br/
-      %span August 01 2011
-    %li
-      %a(href="#")
-        Vintage and modern
-      %br/
-      %span July 04 2011
-    %li
-      %a(href="#")
-        Intermediate Java: complete!
-      %br/
-      %span May 012 2011
-      
+       
+  .archives
+    %ul
+      %li 
+        %a(href="#")
+          November, December, January
+        %br/
+        %span January 23 2012
+      %li
+        %a(href="#")
+          October
+        %br/
+        %span November 28 2011
+      %li
+        %a(href="#")
+          Where do I begin ... September
+        %br/
+        %span November 27 2011
+      %li
+        %a(href="#")
+          Craziness
+        %br/
+        %span August 01 2011
+      %li
+        %a(href="#")
+          Vintage and modern
+        %br/
+        %span July 04 2011
+      %li
+        %a(href="#")
+          Intermediate Java: complete!
+        %br/
+        %span May 12 2011
+      %li
+        %a(href="#")
+          Wise words forgotten
+        %br/
+        %span May 03 2011
+      %li
+        %a(href="#")
+          Wedding dress ideas...
+        %br/
+        %span April 13 2011
+      %li
+        %a(href="#")
+          I'm engaged!!!
+        %br/
+        %span March 22 2011
+      %li
+        %a(href="#")
+          In case you're wondering what I've been up to lately...
+        %br/
+        %span March 10 2011
+      %li
+        %a(href="#")
+          Guide to making a turkey sandwich (if you're a robot)
+        %br/
+        %span January 20 2011
+      %li
+        %a(href="#")
+          Mini cupcakes
+        %br/
+        %span January 03 2011
+      %li
+        %a(href="#")
+          Cute overload!!
+        %br/
+        %span December 10 2010
+      %li
+        %a(href="#")
+          Look who's taking the F train!!
+        %br/
+        %span October 22 2010
+      %li
+        %a(href="#")
+          My love / hate relationship with music
+        %br/
+        %span Ocotber 18 2010
+      %li
+        %a(href="#")
+          Magnolia
+        %br/
+        %span August 31 2010
+      %li
+        %a(href="#")
+          Be@rbrick mania!
+        %br/
+        %span August 26 2010
+      %li
+        %a(href="#")
+          John Weir's Closet Confession
+        %br/
+        %span July 22 2010
 .clear
