--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,7 +7,10 @@
     %meta{:name => "keywords", :content => "Freelance, web developer, web designer"}/
     %meta{:name => "description", :content => "Ana Enders' web portfolio"}/
     %link(href="/stylesheets/app.css" media="screen" rel ="stylesheet" type="text/css")/
+    %link(href="/feed.rss" rel="alternate" type="application/rss+xml" title="Ana Enders Blog RSS")/
     %script(src="/javascripts/jquery-1.7.1.min.js" type="text/javascript")
+    %script(src="/javascripts/underscore-1.3.1.min.js" type="text/javascript")
+    %script(src="/javascripts/sugar-1.2.4.min.js" type="text/javascript")
     %script(src="/javascripts/application.js" type="text/javascript")
     
   %body
