--- a/views/stylesheets/app.scss
+++ b/views/stylesheets/app.scss
@@ -301,11 +301,9 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
       padding: 15px 0; 
       font-weight: normal; 
     }
-    .comments-link {
-      font-style: italic;
-      text-align: right;
-      padding: 3px 28px 6px 0; 
-      background: url('/images/blog/comment.jpg') no-repeat top right;
+    .fb-comment-wrapper {
+      width: 100%;
+      margin: 25px 25px 0 25px;
     }
     p { line-height: 1.5em; padding-bottom: 12px; }
     a { font-weight: normal; color: $dark-grey; float: right; clear: both }
@@ -315,7 +313,7 @@ p { padding-bottom: 10px; line-height: 1.4em; margin: 0px }
     @extend .generic; 
     margin: 20px 0 50px 0;
     .prev { width: 50%; float: left; text-align: left }
-    .next { width: 50%; float: left; text-align: right }
+    .next { width: 50%; float: right; text-align: right }
   }
 } 
 
